--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "NativePlugins/DirectXTK"]
-    path = NativePlugins/DirectXTK
-    url = https://github.com/microsoft/DirectXTK.git
+[submodule "NativePlugins\\DirectXTK"]
+	path = NativePlugins\\DirectXTK
+	url = https://github.com/microsoft/DirectXTK.git
