--- a/NativePlugins/CUDA/CUDA.vcxproj.filters
+++ b/NativePlugins/CUDA/CUDA.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="CUDAPlugin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CUDAPlugin.h">
+    <ClInclude Include="stb_image_write.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
